pipeline final version

--- a/SIM/INCA_libs/history
+++ b/SIM/INCA_libs/history
@@ -17,3 +17,8 @@ s12::(10Mar2022:19:12:02):( ncverilog +sv -f files_verilog.f +nc64bit +nctimesca
 s13::(10Mar2022:19:17:54):( ncverilog +sv -f files_verilog.f +nc64bit +nctimescale+1ns/10ps +access+rwc -ALLOWREDEFINITION )
 s14::(10Mar2022:19:24:22):( ncverilog +sv -f files_verilog.f +nc64bit +nctimescale+1ns/10ps +access+rwc -ALLOWREDEFINITION -linedebug +gui )
 s15::(10Mar2022:19:24:46):( ncverilog +sv -f files_verilog.f +nc64bit +nctimescale+1ns/10ps +access+rwc -ALLOWREDEFINITION )
+s16::(17Mar2022:18:28:00):( ncverilog +sv -f files_verilog.f +nc64bit +nctimescale+1ns/10ps +access+rwc -ALLOWREDEFINITION -linedebug +gui )
+s17::(17Mar2022:18:33:39):( ncverilog +sv -f files_verilog.f +nc64bit +nctimescale+1ns/10ps +access+rwc -ALLOWREDEFINITION -linedebug +gui )
+s18::(17Mar2022:18:34:23):( ncverilog +sv -f files_verilog.f +nc64bit +nctimescale+1ns/10ps +access+rwc -ALLOWREDEFINITION -linedebug +gui )
+s19::(17Mar2022:18:36:56):( ncverilog +sv -f files_verilog.f +nc64bit +nctimescale+1ns/10ps +access+rwc -ALLOWREDEFINITION -linedebug +gui )
+s20::(17Mar2022:18:38:30):( ncverilog +sv -f files_verilog.f +nc64bit +nctimescale+1ns/10ps +access+rwc -ALLOWREDEFINITION )
