forwarding bug fixed -tested OK

--- a/SIM/INCA_libs/history
+++ b/SIM/INCA_libs/history
@@ -46,3 +46,4 @@ s41::(17Mar2022:21:18:10):( ncverilog +sv -f files_verilog.f +nc64bit +nctimesca
 s42::(17Mar2022:21:22:22):( ncverilog +sv -f files_verilog.f +nc64bit +nctimescale+1ns/10ps +access+rwc -ALLOWREDEFINITION )
 s43::(17Mar2022:21:22:34):( ncverilog +sv -f files_verilog.f +nc64bit +nctimescale+1ns/10ps +access+rwc -ALLOWREDEFINITION -linedebug +gui )
 s44::(17Mar2022:21:26:20):( ncverilog +sv -f files_verilog.f +nc64bit +nctimescale+1ns/10ps +access+rwc -ALLOWREDEFINITION -linedebug +gui )
+s45::(29Mar2022:02:02:23):( ncverilog +sv -f files_verilog.f +nc64bit +nctimescale+1ns/10ps +access+rwc -ALLOWREDEFINITION )
